--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,1 +1,46 @@
 @charset "UTF-8";
+
+
+*{
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
+
+body, html{
+    background-color: #5f2c82;
+    height: 100vh;
+    width: 100vw;
+}
+
+main{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;   
+    align-items: center;          
+}
+
+section#login{
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.637);
+}
+
+section#login > div#imagem{
+    display: block;
+    background: #5f2c82 url(../imagens/pexels-marcela-toledo-3242608-5610083\ \(1\).jpg);
+    height: 200px;
+    background-size: cover;
+
+}
+
+section#login > div#formulario{
+    display: block;
+    padding: 10px;
+}
