--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -30,14 +30,22 @@
         width: 952px;
     }
     section#login > div#imagem{
-        float: left;
+        float: right;
         width: 40%;
         height: 100%;
         background-position: center top;
     }
     section#login > div#formulario{
-        float: right;
+        float: left;
         width: 60%;
     } 
+    div#formulario > p{
+    font-size: 1em;
+}
+div#formulario > h1{
+    font-size: 2em;
+}
+
+
 }
 
