--- a/estilos/style.css
+++ b/estilos/style.css
@@ -25,7 +25,7 @@ main{
 
 section#login{
     background-color: white;
-    width: 250px;
+    width: 260px;
     height: 500px;
     border-radius: 20px;
     overflow: hidden;
@@ -47,6 +47,16 @@ section#login > div#formulario{
     padding: 10px;
 }
 
+form > div.campo{
+    background-color: #5f2c82;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+form label{
+    display: none;
+}
+
 div#formulario > h1{
     text-align: center;
     margin-bottom: 10px;
@@ -54,4 +64,39 @@ div#formulario > h1{
 
 div#formulario > p{
     font-size: 0.8em;
+}
+
+input.submit {
+    display: block;   
+    font-size: 1em;   
+    width: 100%;   
+    height: 30px; 
+    background-color: #49a09d;
+    color: white;
+    border-radius: 5px;
+    margin-top: 20px;
+    border: none;
+    cursor: pointer;
+}
+form input.submit:hover {
+    background-color: #2c6b6a;
+    transition: 0.3s;
+}
+form  a.botao{
+    text-align: center;
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 32px;
+    margin-top: 5px;
+    background-color: #49a09d;
+    border-radius: 5px;
+    border: 1px solid #34817f;
+    text-decoration: none;
+    color: white;
+    
+}
+form  a.botao:hover{
+    background-color: #2c6b6a;
+    
 }
