--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,6 +1,5 @@
 @charset "UTF-8";
 
-
 @media screen and (min-width: 768px) and (max-width: 992px) {
     body{
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
@@ -8,6 +7,7 @@
 
     section#login{
         width: 80vw;
+        height: 330px;
     }
     section#login > div#imagem{
         float: left;
@@ -19,7 +19,6 @@
         float: right;
         width: 70%;
     }
-
 }
 
 @media screen and (min-width: 992px){
@@ -28,6 +27,7 @@
     }
     section#login{
         width: 952px;
+        height: 350px;
     }
     section#login > div#imagem{
         float: right;
@@ -40,12 +40,9 @@
         width: 60%;
     } 
     div#formulario > p{
-    font-size: 1em;
+        font-size: 1em;
+    }
+    div#formulario > h1{
+        font-size: 2em;
+    }
 }
-div#formulario > h1{
-    font-size: 2em;
-}
-
-
-}
-
