--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,6 +1,5 @@
 @charset "UTF-8";
 
-
 *{
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding: 0px;
@@ -39,7 +38,6 @@ section#login > div#imagem{
     background: #5f2c82 url(../imagens/pexels-marcela-toledo-3242608-5610083\ \(1\).jpg);
     height: 200px;
     background-size: cover;
-
 }
 
 section#login > div#formulario{
@@ -50,7 +48,8 @@ section#login > div#formulario{
 form > div.campo{
     background-color: #5f2c82;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 8px;
+    border: 3px solid #5f2c82;
     margin: 5px 0px;
 }
 form label{
@@ -70,11 +69,12 @@ input.submit {
     display: block;   
     font-size: 1em;   
     width: 100%;   
-    height: 30px; 
+    height: 33px; 
     background-color: #49a09d;
     color: white;
     border-radius: 5px;
-    margin-top: 20px;
+    margin-top: 15px;
+    
     border: none;
     cursor: pointer;
 }
@@ -82,21 +82,47 @@ form input.submit:hover {
     background-color: #2c6b6a;
     transition: 0.3s;
 }
-form  a.botao{
+
+form a.botao{
     text-align: center;
     display: block;
     font-size: 1em;
     width: 100%;
-    height: 32px;
-    margin-top: 5px;
-    background-color: #49a09d;
+    height: 33px;
+    margin-top: 10px;
+    
+    background-color: white;
     border-radius: 5px;
     border: 1px solid #34817f;
     text-decoration: none;
-    color: white;
-    
+    color: #49a09d;
 }
-form  a.botao:hover{
-    background-color: #2c6b6a;
+
+div.campo > i{
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input{
+    background-color: #65ddd9;
+    font-size: 1em;
+    height: 100%;
+    width: calc(100% - 45px);
     
+    border: none;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-14px);
+}
+div.campo > input:focus-within{
+    background-color: white;
+
+}
+
+form a.botao:hover{
+    background-color: #2c6b6a;
+    color: white;
+    transition: 0.3s;
 }
